--- a/todo/src/main/resources/templates/tasks.html
+++ b/todo/src/main/resources/templates/tasks.html
@@ -25,7 +25,7 @@
                 class="flex-grow px-4 py-3 rounded-lg shadow border border-gray-300 placeholder-gray-400 focus:ring-2 focus:ring-blue-500 focus:outline-none"
         />
         <button type="submit" class="bg-blue-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-700 transition shadow">
-            ➕ Add Task
+            Add Task
         </button>
     </form>
 
